--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,222 +12,320 @@ Email:  support@getkirby.com
 /* Source Sans Pro
 -------------------------------------------------- */
 @font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
-  font-weight: 300;
-  src: url(../fonts/sourcesanspro-300.woff) format('woff');
+	font-family: 'Source Sans Pro';
+	font-style: normal;
+	font-weight: 300;
+	src: url(../fonts/sourcesanspro-300.woff) format('woff');
 }
 @font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/sourcesanspro-400.woff) format('woff');
+	font-family: 'Source Sans Pro';
+	font-style: normal;
+	font-weight: 400;
+	src: url(../fonts/sourcesanspro-400.woff) format('woff');
 }
 @font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
-  font-weight: 600;
-  src: url(../fonts/sourcesanspro-600.woff) format('woff');
+	font-family: 'Source Sans Pro';
+	font-style: normal;
+	font-weight: 600;
+	src: url(../fonts/sourcesanspro-600.woff) format('woff');
 }
 @font-face {
-  font-family: 'Source Sans Pro';
-  font-style: italic;
-  font-weight: 400;
-  src: url(../fonts/sourcesanspro-400-italic.woff) format('woff');
+	font-family: 'Source Sans Pro';
+	font-style: italic;
+	font-weight: 400;
+	src: url(../fonts/sourcesanspro-400-italic.woff) format('woff');
 }
 
 
 /* Reset
 -------------------------------------------------- */
 *, *:before, *:after {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	-webkit-box-sizing: border-box;
+		 -moz-box-sizing: border-box;
+					box-sizing: border-box;
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, main, nav, section, summary {
-  display: block;
+	display: block;
 }
 
 
 /* Pix
 -------------------------------------------------- */
 img {
-  display: block;
-  max-width: 100%;
+	display: block;
+	max-width: 100%;
 }
 
 
 /* Links
 -------------------------------------------------- */
 a {
-  color: #000;
-  text-decoration: none;
-  transition: color .3s, background .3s, border .3s;
+	color: #000;
+	text-decoration: none;
+	transition: color .3s, background .3s, border .3s;
 }
 a:hover {
-  color: red;
+	color: red;
 }
 
 
 /* Clearfix
 -------------------------------------------------- */
 .cf:after {
-  content: "";
-  display: table;
-  clear: both;
+	content: "";
+	display: table;
+	clear: both;
 }
 
 
 /* Site
 -------------------------------------------------- */
 html {
-  height: 101%;
-  font-family: "Source Sans Pro", sans-serif;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+	height: 101%;
+	font-family: "Source Sans Pro", sans-serif;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
 }
 body {
-  margin: 0 auto;
-  font-size: 1.25em;
-  line-height: 1.5em;
-  padding: 1.5em;
-  max-width: 50em;
-  background: #fff;
-  color: #222;
+	margin: 0 auto;
+	font-size: 1em;
+	line-height: 1.5em;
+	padding: 1.5rem;
+	background: #f5F5F5;
+	color: #222;
 }
 
 
 /* Header
 -------------------------------------------------- */
 .header {
-  border-bottom: 2px solid red;
-  margin-bottom: 1.5em;
+	font-family: "Times New Roman", serif;
+	color : rgb(0, 190, 0);
+	font-size: 1.25rem;
+	line-height: 1.2em;
+	float: left;
+}
+nav {
+	margin-bottom: 2rem;
+}
+
+.menu>li{
+	margin-left: .5rem;
 }
 .logo {
-  display: block;
-  margin-bottom: 1.5em;
+	display: block;
+	margin-bottom: 1.5em;
 }
 .logo img {
-  width: 2em;
+	width: 2em;
+}
+#interface{
+	position: absolute;
+	float:right;
+	top: 2rem;
+	right:	2rem;
+}
+input{
+	font-size: 1em;
+	line-height: 1.25em;
+	padding-left: .25em;
+}
+button, select{
+	font-size: 1rem;
+	padding: .5em .75em;
+	cursor: pointer;
+	border-radius: 0px;
+	background: #bbb;
+	-webkit-appearance: inherit;
 }
 
-
+#newpage.form{
+	width: 300px;
+	height: 150px;
+	position: absolute;
+	margin: auto;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 1rem;
+	border: 1px solid black;
+}
+#newpage input {
+	border: 1px solid black;
+	padding: 5px;
+}
+#newpage .buttons{
+	margin-top: 1rem;
+}
+#newpage .btn-submit{
+		float: right;
+}
+.menu>li>ul{
+	padding-left: 10px !important;
+}
+.menu>li>.element:first-child{
+	font-size: 1.25rem;
+	padding: 3px 10px;
+	border: 2px solid;
+	margin: 0;
+	display: inline-block;
+}
+.menu li > span.space{
+	width: 56px;
+	display: inline-block;
+}
+.menu>li>ul:before{
+	content: "│";
+}
+.menu>li>ul li > .element:before {
+    content: "├─ ";
+}
+.menu>li>ul li:last-child >.element:before {
+    content: "└─ ";
+}
+.menu>li>ul .bar:before{
+	content: "│" !important;
+}
+/* Sortable menu
+-------------------------------------------------- */
+.moving-element {
+	position: fixed;
+	pointer-events: none;
+}
 /* Navigation
 -------------------------------------------------- */
 .menu a {
-  display: block;
-  color: #222;
+	color : rgb(0, 190, 0);
 }
 .menu a:hover {
-  color: red;
-  text-decoration: none;
+	color: rgba(0, 190, 0, .5);
+	text-decoration: none;
 }
 .menu .active {
-  color: red;
+	color: white;
 }
 .menu li {
-  list-style: none;
+	list-style: none;
 }
 .menu > li {
-  position: relative;
+	display: table;
+	position: relative;
+	margin-right: 1em;
 }
 .menu > li > a {
-  padding: .35em 0;
-  border-top: 1px solid #ddd;
-  font-weight: 600;
 }
-
+.menu .log{
+	float: right;
+}
+#login-panel{
+	display: none;
+	width: 300px;
+	height: 400px;
+	background: white;
+	border: 1px solid black;
+	z-index: 9999; 
+	padding: 1em;
+	right: auto;
+	left: auto;
+	position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+#login-panel.shown{
+	display: block;
+}
+.button{
+	padding:.25em .5em;
+	border: 1px solid black;
+	cursor: pointer;
+	margin-top: 1em;
+}
 .submenu {
-  position: absolute;
-  z-index: 1;
-  display: none;
-  left: 1em;
+	position: absolute;
+	z-index: 1;
+	display: none;
+	left: 1em;
 }
 .submenu:before {
-  position: absolute;
-  z-index: -1;
-  content: '';
-  top: -.5em;
-  left: 0;
-  border-top: .5em solid transparent;
-  border-bottom: .5em solid transparent;
-  border-left: .5em solid #222;
+	position: absolute;
+	z-index: -1;
+	content: '';
+	top: -.5em;
+	left: 0;
+	border-top: .5em solid transparent;
+	border-bottom: .5em solid transparent;
+	border-left: .5em solid #222;
 }
 .submenu li {
-  border-bottom: 1px solid #444;
+	border-bottom: 1px solid #444;
 }
 .submenu a {
-  padding: .5em 1.5em;
-  font-size: .9em;
-  font-weight: 300;
-  color: #fff;
-  background: #222;
-  white-space: nowrap;
+	padding: .5em 1.5em;
+	font-size: .9em;
+	font-weight: 300;
+	color: #fff;
+	background: #222;
+	white-space: nowrap;
 }
 .submenu a:hover {
-  background: #333;
-  color: #fff;
+	background: #333;
+	color: #fff;
 }
 
 @media screen and (min-width: 40em) {
-  body {
-    padding: 3em;
-  }
-  .logo {
-    float: left;
-  }
-  .menu {
-    float: right;
-    margin-right: -1em;
-  }
-  .menu > li {
-    float: left;
-  }
-  .menu > li > a {
-    padding: .35em 1em;
-    border: 0;
-  }
-  .menu > li:hover .submenu {
-    display: block;
-  }
+	body {
+		padding: 2rem;
+	}
+	.logo {
+		float: left;
+	}
+	.menu {
+	}
+	.menu > li {
+	}
+	.menu > li > a {
+		border: 0;
+	}
+	.menu > li:hover .submenu {
+		display: block;
+	}
 }
 
 
 /* Headings
 -------------------------------------------------- */
 h1 {
-  font-size: 2em;
-  line-height: 1.25em;
-  font-weight: 400;
-  margin-bottom: .5em;
+	font-size: 2em;
+	line-height: 1.25em;
+	font-weight: 300;
+	margin-bottom: .5em;
 }
 h2 {
-  font-size: 2em;
-  line-height: 1.25em;
-  font-weight: 300;
-  margin-bottom: .5em;
-  color: red;
+	line-height: 1.25em;
+	font-weight: 300;
+	margin-bottom: .5em;
 }
 h3 {
-  font-size: 1.4em;
-  line-height: 1.5em;
-  font-weight: 400;
-  margin-bottom: .5em;
+	line-height: 1.5em;
+	font-weight: 300;
+	margin-bottom: .5em;
 }
 h4 {
-  font-size: 1.125em;
-  font-weight: 600;
-  line-height: 1.5em;
-  margin-bottom: .5em;
-  color: red;
+	font-weight: 300;
+	line-height: 1.5em;
+	margin-bottom: .5em;
 }
 h1 a, h2 a, h3 a, h4 a {
-  color: inherit;
-  border: 0 !important;
+	color: inherit;
+	border: 0 !important;
 }
 
 
@@ -235,101 +333,104 @@ h1 a, h2 a, h3 a, h4 a {
 /* Main
 -------------------------------------------------- */
 .main {
-  padding-bottom: 1.5em;
-  border-bottom: 2px solid red;
+	color: rgb(0, 190, 0)!important;
+	padding: 1rem;
+	margin-left: 50%;
+	min-width: 300px;
+	border: 1px solid;
 }
 .main hr {
-  margin: 3em 0;
-  height: 2px;
-  background: #ddd;
+	margin: 3em 0;
+	height: 2px;
+	background: #ddd;
 }
 .main p,
 .main figure,
 .main ul,
 .main ol {
-  margin-bottom: 1.5em;
+	margin-bottom: 1.5em;
 }
 .main a {
-  border-bottom: 2px solid #ddd;
+	border-bottom: 2px solid #ddd;
 }
 .main a:hover {
-  border-color: #222;
+	border-color: #222;
 }
 
 /* Text blocks */
 .text ul,
 .text ol {
-  margin-left: 1em;
+	margin-left: 1em;
 }
 
 /* Project meta
 -------------------------------------------------- */
 .meta {
-  margin-bottom: 1.5em;
+	margin-bottom: 1.5em;
 }
 .meta li {
-  float: left;
-  list-style: none;
-  margin-right: 2em;
-  color: red;
+	float: left;
+	list-style: none;
+	margin-right: 2em;
+	color: red;
 }
 .meta li b {
-  font-weight: 400;
-  color: #000;
-  padding-right: .25em;
+	font-weight: 300;
+	color: #000;
+	padding-right: .25em;
 }
 
 
 /* Project teaser
 -------------------------------------------------- */
 .teaser {
-  list-style: none;
+	list-style: none;
 }
 .teaser li {
-  margin-bottom: 1.5em;
-  list-style: none;
+	margin-bottom: 1.5em;
+	list-style: none;
 }
 @media screen and (min-width: 50em) {
-  .teaser li {
-    float: left;
-    width: 30%;
-    margin-left: 5%;
-  }
-  .teaser li:first-child {
-    margin-left: 0;
-  }
+	.teaser li {
+		float: left;
+		width: 30%;
+		margin-left: 5%;
+	}
+	.teaser li:first-child {
+		margin-left: 0;
+	}
 }
 
 
 /* Next/Prev nav
 -------------------------------------------------- */
 .nextprev {
-  padding: 1em 0;
+	padding: 1em 0;
 }
 .nextprev a {
-  border: 0;
+	border: 0;
 }
 .nextprev .prev {
-  float: left;
+	float: left;
 }
 .nextprev .next {
-  float: right;
+	float: right;
 }
 
 
 /* Footer
 -------------------------------------------------- */
 .footer {
-  padding: 1em 0 6em;
-  font-size: .8em;
+	padding: 1em 0 6em;
+	font-size: .8em;
 }
 .copyright {
-  float: left;
+	float: left;
 }
 .colophon {
-  float: right;
+	float: right;
 }
 .colophon a b {
-  color: red;
-  padding-left: .25em;
+	color: red;
+	padding-left: .25em;
 }
