--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,7 +170,7 @@ button, select{
 .menu>li>.element:first-child{
 	font-size: 1.25rem;
 	padding: 3px 10px;
-	border: 2px solid;
+	border: 1px solid;
 	margin: 0;
 	display: inline-block;
 }
@@ -208,7 +208,7 @@ button, select{
 .menu .active {
 	color: white;
 }
-.menu li {
+li {
 	list-style: none;
 }
 .menu > li {
@@ -382,6 +382,15 @@ h1 a, h2 a, h3 a, h4 a {
 .text ol {
 	margin-left: 1em;
 }
+
+/* Project meta
+-------------------------------------------------- */
+
+.user-list img{
+	width: 50px;
+	display: inline-block;
+}
+
 
 /* Project meta
 -------------------------------------------------- */
