--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,18 @@ Email:  support@getkirby.com
 	font-weight: 400;
 	src: url(../fonts/sourcesanspro-400-italic.woff) format('woff');
 }
+@font-face {
+    font-family: 'propcouriersansregular';
+    src: url(../fonts/propcouriersans-regular-webfont.eot);
+    src: url(../fonts/propcouriersans-regular-webfont.eot?#iefix) format('embedded-opentype'),
+         url(../fonts/propcouriersans-regular-webfont.woff2) format('woff2'),
+         url(../fonts/propcouriersans-regular-webfont.woff) format('woff'),
+         url(../fonts/propcouriersans-regular-webfont.ttf) format('truetype'),
+         url(../fonts/propcouriersans-regular-webfont.svg#propcouriersansregular) format('svg');
+    font-weight: normal;
+    font-style: normal;
 
+}
 
 /* Reset
 -------------------------------------------------- */
@@ -86,7 +97,7 @@ a:hover {
 -------------------------------------------------- */
 html {
 	height: 101%;
-	font-family: "Source Sans Pro", sans-serif;
+	font-family: "propcouriersansregular", sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 }
@@ -94,7 +105,6 @@ body {
 	margin: 0 auto;
 	font-size: 1em;
 	line-height: 1.5em;
-	padding: 1.5rem;
 	background: #f5F5F5;
 	color: #222;
 }
@@ -103,15 +113,19 @@ body {
 /* Header
 -------------------------------------------------- */
 .header {
-	font-family: "Times New Roman", serif;
-	color : rgb(0, 190, 0);
+	font-family: "propcouriersansregular", serif;
+	color : black;
 	font-size: 1.25rem;
 	line-height: 1.2em;
 }
 nav {
 	margin-bottom: 2rem;
+	position: absolute;
+	width: 100%
 }
-
+.menu{
+	float: left;
+}
 .menu>li{
 	margin-left: .5rem;
 }
@@ -122,8 +136,18 @@ nav {
 .logo img {
 	width: 2em;
 }
+#prez{
+	height: 800px;
+}
+#cover{
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: -9999;
+	height: 800px;
+	overflow: hidden;
+}
 #interface{
-	position: absolute;
 	float:right;
 	top: 2rem;
 	right:	2rem;
@@ -199,10 +223,10 @@ button, select{
 /* Navigation
 -------------------------------------------------- */
 .menu a {
-	color : rgb(0, 190, 0);
+	color : black;
 }
 .menu a:hover {
-	color: rgba(0, 190, 0, .5);
+	color: black;
 	text-decoration: none;
 }
 .menu .active {
@@ -302,7 +326,6 @@ li {
 
 @media screen and (min-width: 40em) {
 	body {
-		padding: 2rem;
 	}
 	.logo {
 		float: left;
@@ -353,11 +376,11 @@ h1 a, h2 a, h3 a, h4 a {
 /* Main
 -------------------------------------------------- */
 .main {
-	color: rgb(0, 190, 0)!important;
+	color: black;
 	padding: 1rem;
-	min-width: 300px;
-	max-width: 1000px;
-	border: 1px solid;
+	padding-top: 5rem;
+	max-width: 1220px;
+	margin: 0 auto;
 }
 .main hr {
 	margin: 3em 0;
@@ -401,7 +424,7 @@ h1 a, h2 a, h3 a, h4 a {
 	float: left;
 	list-style: none;
 	margin-right: 2em;
-	color: red;
+	color: #000;
 }
 .meta li b {
 	font-weight: 300;
