--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,12 @@ a:hover {
 	clear: both;
 }
 
+/* Helpers
+-------------------------------------------------- */
+.hidden {
+  display: none;
+}
+
 
 /* Site
 -------------------------------------------------- */
@@ -430,6 +436,18 @@ h1 a, h2 a, h3 a, h4 a {
 	}
 }
 
+/* Edit Ad
+-------------------------------------------------- */
+main textarea, main input {
+  width: 100%;
+  border: 1px solid;
+  margin-bottom: 30px;
+}
+main textarea {
+  height: 300px;
+}
+main input {
+}
 
 /* Next/Prev nav
 -------------------------------------------------- */
