--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -451,6 +451,27 @@ h1 a, h2 a, h3 a, h4 a {
 
 /* Annonce
 -------------------------------------------------- */
+
+/* Général */
+.viewMode .editOnly {
+  display: none;
+}
+.editMode .editOnly {
+  display: block;
+}
+.viewMode .viewOnly {
+  display: block;
+}
+.editMode .viewOnly {
+  display: none;
+}
+.fieldsGroup {
+  margin: 2rem 0;
+  padding: 2rem;
+  border: 1px solid #AAA;
+}
+
+/* Viewer */
 .swiper-container {
   width: 100%;
   height: 300px;
@@ -490,12 +511,33 @@ h1 a, h2 a, h3 a, h4 a {
   position: absolute;
   top: 0;
   right: 0;
+  left: 0;
+  bottom: 0;
   margin: 0;
   opacity: 0;
   -ms-filter: 'alpha(opacity=0)';
   font-size: 200px;
   direction: ltr;
   cursor: pointer;
+  padding: 0px;
+  width: 100%;
+}
+.progress {
+  height: 10px;
+  background-color: #fff;
+}
+.progress-bar {
+  height: 100%;
+  background-color: #444;
+  width: 0%;
+}
+
+/* Specific fields */
+#informations .fieldsGroup {
+  display: none;
+}
+#informations .fieldsGroup.selected {
+  display: block;
 }
 
 /* Fixes for IE < 8 */
@@ -539,3 +581,13 @@ h1 a, h2 a, h3 a, h4 a {
 	color: red;
 	padding-left: .25em;
 }
+
+/* Plugins Specifics
+-------------------------------------------------- */
+/* Uniform */
+.uniform__potty {
+	position: absolute;
+	top: -9999px;
+	left: -9999px;
+}
+
