--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,15 +106,65 @@ html {
 	font-family: "propcouriersansregular", sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
+  font-size: 18px;
+  line-height: 24px;
 }
 body {
 	margin: 0 auto;
-	font-size: 1em;
-	line-height: 1.5em;
 	background: #f5F5F5;
 	color: #222;
+  font-family: "propcouriersansregular", sans-serif;
 }
 
+/* Main
+-------------------------------------------------- */
+p {
+  font-size: 1rem;
+}
+li {
+	list-style: none;
+}
+.main {
+	color: black;
+	padding: 1rem;
+	padding-top: 5rem;
+	max-width: 1220px;
+	margin: 0 auto;
+}
+.main hr {
+	margin: 3em 0;
+	height: 2px;
+	background: #ddd;
+}
+
+
+/* Headings
+-------------------------------------------------- */
+h1 {
+	font-size: 2em;
+	line-height: 1.25em;
+	font-weight: 300;
+	margin-bottom: .5em;
+}
+h2 {
+	line-height: 1.25em;
+	font-weight: 300;
+	margin-bottom: .5em;
+}
+h3 {
+	line-height: 1.5em;
+	font-weight: 300;
+	margin-bottom: .5em;
+}
+h4 {
+	font-weight: 300;
+	line-height: 1.5em;
+	margin-bottom: .5em;
+}
+h1 a, h2 a, h3 a, h4 a {
+	color: inherit;
+	border: 0 !important;
+}
 
 /* Header
 -------------------------------------------------- */
@@ -169,8 +219,8 @@ nav {
 	margin-top: -30px;
 }
 
-/* ================== INTERFACE ================== */
-
+/* Panel
+-------------------------------------------------- */
 .panelButton {
 	cursor: pointer;
 	z-index: 99999999;
@@ -200,62 +250,9 @@ nav {
 	display: block;
 }
 input{
-	font-size: 1em;
-	line-height: 1.25em;
-	padding-left: .25em;
-}
-button, select{
-	font-family: "propcouriersansregular";
 	font-size: 1rem;
-	padding: .3em .75em;
-	line-height: 1.5em;
-	cursor: pointer;
-	border-radius: 0px;
-	-webkit-appearance: inherit;
-}
-.button{
-	font-size: 1rem;
-	padding: .3em .75em;
-	cursor: pointer;
-	border-radius: 0px;
-	background-color: rgb(77,250,137);
-	-webkit-appearance: inherit;
-	display: inline-block;
-}
-.submitButton{
-	display: none;
-	background-color: rgb(77,250,137);
-}
-.editButton{
-	background-color: rgb(77,250,137);
-}
-.cancelButton{
-	background-color: rgb(250, 77, 77);
-}
-.editable{
-	background: white;
-}
-#newpage.form{
-	width: 300px;
-	height: 150px;
-	position: absolute;
-	margin: auto;
-	top:0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	padding: 1rem;
-	border: 1px solid black;
-}
-#newpage input {
-	border: 1px solid black;
-	padding: 5px;
-}
-#newpage .buttons{
-	margin-top: 1rem;
-}
-#newpage .btn-submit{
-		float: right;
+	line-height: 1.25rem;
+	padding-left: .25rem;
 }
 
 /* Sortable menu
@@ -266,141 +263,14 @@ button, select{
 }
 /* Navigation
 -------------------------------------------------- */
-.menu a {
-	color : black;
-}
-.menu a:hover {
-	color: black;
-	text-decoration: none;
-}
-.menu .active {
-	color: white;
-}
-li {
-	list-style: none;
-}
-.menu > li {
-	display: table;
-	position: relative;
-	margin-right: 1em;
-	float: left;
-}
-.menu > li > a {
-}
-
-.submenu {
-	position: absolute;
-	z-index: 1;
-	display: none;
-	left: 1em;
-}
-.submenu:before {
-	position: absolute;
-	z-index: -1;
-	content: '';
-	top: -.5em;
-	left: 0;
-	border-top: .5em solid transparent;
-	border-bottom: .5em solid transparent;
-	border-left: .5em solid #222;
-}
-.submenu li {
-	border-bottom: 1px solid #444;
-}
-.submenu a {
-	padding: .5em 1.5em;
-	font-size: .9em;
-	font-weight: 300;
-	color: #fff;
-	background: #222;
-	white-space: nowrap;
-}
-.submenu a:hover {
-	background: #333;
-	color: #fff;
-}
-
-@media screen and (min-width: 40em) {
-	body {
-	}
-	.logo {
-		float: left;
-	}
-	.menu {
-	}
-	.menu > li {
-	}
-	.menu > li > a {
-		border: 0;
-	}
-	.menu > li:hover .submenu {
-		display: block;
-	}
-}
-
-
-/* Headings
--------------------------------------------------- */
-h1 {
-	font-size: 2em;
-	line-height: 1.25em;
-	font-weight: 300;
-	margin-bottom: .5em;
-}
-h2 {
-	line-height: 1.25em;
-	font-weight: 300;
-	margin-bottom: .5em;
-}
-h3 {
-	line-height: 1.5em;
-	font-weight: 300;
-	margin-bottom: .5em;
-}
-h4 {
-	font-weight: 300;
-	line-height: 1.5em;
-	margin-bottom: .5em;
-}
-h1 a, h2 a, h3 a, h4 a {
-	color: inherit;
-	border: 0 !important;
-}
 
 
 
-/* Main
--------------------------------------------------- */
-.main {
-	color: black;
-	padding: 1rem;
-	padding-top: 5rem;
-	max-width: 1220px;
-	margin: 0 auto;
-}
-.main hr {
-	margin: 3em 0;
-	height: 2px;
-	background: #ddd;
-}
-.main p,
-.main figure,
-.main ul,
-.main ol {
-	margin-bottom: 1.5em;
-}
-.main a {
-	border-bottom: 2px solid #ddd;
-}
-.main a:hover {
-	border-color: #222;
-}
 
-/* Text blocks */
-.text ul,
-.text ol {
-	margin-left: 1em;
-}
+
+
+
+
 
 /* Project meta
 -------------------------------------------------- */
