--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -139,6 +139,26 @@ li {
 	background: #ddd;
 }
 
+/* Forms
+-------------------------------------------------- */
+.form-control {
+  font-size: inherit;
+}
+.autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
+.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
+.autocomplete-selected { background: #F0F0F0; }
+.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
+.autocomplete-group { padding: 2px 5px; }
+.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
+
+.form-control[readonly] {
+  background: none;
+  color: inherit;
+  border: none;
+  box-shadow: none;
+}
+.pac-container{z-index:2000 !important;}
+
 
 /* Headings
 -------------------------------------------------- */
