--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,7 +129,7 @@ li {
 .main {
 	color: black;
 	padding: 1rem;
-	padding-top: 5rem;
+	padding-top: 3rem;
 	max-width: 1220px;
 	margin: 0 auto;
 }
@@ -166,22 +166,22 @@ h1 {
 	font-size: 2em;
 	line-height: 1.25em;
 	font-weight: 300;
-	margin-bottom: .5em;
+	margin: .5em 0;
 }
 h2 {
 	line-height: 1.25em;
 	font-weight: 300;
-	margin-bottom: .5em;
+	margin: .5em 0;
 }
 h3 {
 	line-height: 1.5em;
 	font-weight: 300;
-	margin-bottom: .5em;
+	margin: .5em 0;
 }
 h4 {
 	font-weight: 300;
 	line-height: 1.5em;
-	margin-bottom: .5em;
+	margin: .5em 0;
 }
 h1 a, h2 a, h3 a, h4 a {
 	color: inherit;
@@ -369,9 +369,13 @@ input{
 }
 
 /* Viewer */
+#viewer {
+  background-color: #81D7FF;
+  padding: 2rem 1rem;
+}
 .swiper-container {
   width: 100%;
-  height: 300px;
+  height: 500px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -399,7 +403,28 @@ input{
   opacity: 1;
 }
 
+#swiper-button-delete {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  z-index: 9999;
+}
+
 /* File Upload */
+#uploadImages {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+}
+#progress {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 5px;
+  margin: 0 15px;
+}
 .fileinput-button {
   position: relative;
   overflow: hidden;
@@ -408,25 +433,12 @@ input{
   position: absolute;
   top: 0;
   right: 0;
-  left: 0;
-  bottom: 0;
   margin: 0;
   opacity: 0;
   -ms-filter: 'alpha(opacity=0)';
   font-size: 200px;
   direction: ltr;
   cursor: pointer;
-  padding: 0px;
-  width: 100%;
-}
-.progress {
-  height: 10px;
-  background-color: #fff;
-}
-.progress-bar {
-  height: 100%;
-  background-color: #444;
-  width: 0%;
 }
 
 /* Specific fields */
