--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -478,6 +478,22 @@ controlButtons .button {
 }
 
 
+/* My Account
+-------------------------------------------------- */
+#account-iframe {
+	width: 100%;
+	height: 4000px;
+	margin-top: -48px;
+}
+#account-iframe-wrapper {
+	max-width: 770px;
+	width: 100%;
+	height: 4000px;
+	display: inline-block;
+	overflow: hidden;
+	border: 1px solid;
+}
+
 /* Footer
 -------------------------------------------------- */
 .footer {
