--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,7 +113,7 @@ html {
 }
 body {
 	margin: 0 auto;
-	background: #f5F5F5;
+	background: #FDFF9C;
 	color: #222;
   font-family: "propcouriersansregular", sans-serif;
 }
@@ -134,9 +134,10 @@ li {
 	margin: 0 auto;
 }
 .main hr {
-	margin: 3em 0;
-	height: 2px;
-	background: #ddd;
+	margin: 3rem 0px;
+	height: 1px;
+	background: #000 none repeat scroll 0% 0%;
+	border: none;
 }
 
 /* Forms
@@ -353,6 +354,14 @@ nav {
 	}
 }
 
+
+/* Annonces
+-------------------------------------------------- */
+.template-annonces #liste-annonces .row {
+	margin-top: 1.5rem;
+}
+
+
 /* Annonce
 -------------------------------------------------- */
 
@@ -482,13 +491,13 @@ controlButtons .button {
 -------------------------------------------------- */
 #account-iframe {
 	width: 100%;
-	height: 4000px;
+	height: 1300px;
 	margin-top: -48px;
+	display: block;
 }
 #account-iframe-wrapper {
 	max-width: 770px;
 	width: 100%;
-	height: 4000px;
 	display: inline-block;
 	overflow: hidden;
 	border: 1px solid;
