--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,7 +108,7 @@ body, html {
   line-height: 24px;
 }
 html {
-	height: 101%;
+	height: 100%;
 	font-family: "propcouriersansregular", sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
@@ -138,6 +138,40 @@ li {
 	height: 1px;
 	background: #000 none repeat scroll 0% 0%;
 	border: none;
+}
+
+/* Home
+-------------------------------------------------- */
+#megabloc-wrapper {
+  position: fixed;
+  top: 3rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+#megabloc {
+  width: 150%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  top: 0;
+  position: absolute;
+}
+#megabloc>div {
+  width: 33.333%;
+  height: 100%;
+  float: left;
+  border-right: 1px solid;
+}
+#megabloc iframe {
+  width: 100%;
+  height: 100%;
+}
+#column-home p {
+  font-size: 1.5rem;
+  line-height: 120%;
 }
 
 /* Forms
