--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,7 +157,7 @@ hr {
   overflow-y: hidden;
 }
 #megabloc {
-  width: 150%;
+  width: 100%;
   top: 2.5rem;
   left: 0%;
   bottom: 0;
@@ -173,18 +173,23 @@ hr {
           transition: left 500ms ease;
 }
 #megabloc>div {
-  width: 33.333%;
   height: 100%;
   float: left;
-  border-right: 1px solid;
+  /*border-right: 1px solid;*/
 	overflow-x: hidden;
 	overflow-y: hidden;
-	padding: .5rem 0;
+	padding: 2rem 1rem;
 	position: relative;
 }
 #megabloc iframe {
   width: 100%;
   height: 100%;
+}
+#column-annonces{
+    width: 33.333%;
+}
+#column-annonce{
+    width: calc(100% - 33.333%);
 }
 #column-home p {
   font-size: 1.5rem;
@@ -192,7 +197,7 @@ hr {
 }
 /* Headers */
 .columns-header {
-	width: 150%;
+	/*width: 150%;*/
 }
 .column-header {
 	width: 33.33%;
@@ -399,7 +404,8 @@ h1.title{
 h2 {
 	line-height: 1.25em;
 	font-weight: 300;
-	margin: .5em 0;
+	margin: 0;
+    font-size: 40px;
 }
 h3 {
 	line-height: 1.5em;
@@ -519,7 +525,29 @@ nav {
 	display: inline-block;
 }
 
-
+.avatar{
+    font-size: 3rem;
+    text-align: center;
+    width: 80px;
+    height: 100%;
+    float: left;
+    padding: 0;
+    height: 90px;
+    line-height: 120px;
+    background-color: #eee;
+    border-right: 1px solid black;
+    color: #666;
+    overflow: hidden;
+}
+.event-preview{
+    overflow: hidden;
+    height: 330px;
+    padding: 0;
+    border-bottom: 1px solid black;
+}
+.event-preview img{
+    width: 100%;
+}
 /* Project meta
 -------------------------------------------------- */
 .meta {
@@ -562,14 +590,14 @@ nav {
 /* Annonces
 -------------------------------------------------- */
 #liste-annonces .container-fluid {
-	padding: 3rem 0px;
-	border-bottom: 1px solid;
+    border: 1px solid;
+    margin-bottom: 2rem;
 }
 #liste-annonces .container-fluid:hover {
 	background-color: #FBFF4E;
 }
 #liste-annonces .row img {
-	border: 1px solid;
+	/*border: 1px solid;*/
 }
 #btn-new {
 	width: 100%;
