--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -457,6 +457,14 @@ h1 a, h2 a, h3 a, h4 a {
 	border: 0 !important;
 }
 
+/* Texts */
+blockquote {
+    padding: 0;
+    margin: 20px 0px 20px 40px;
+    border-left: 1px solid #355533;
+	border: 0;
+}
+
 /* Forms
 -------------------------------------------------- */
 .dropdown-menu {
@@ -751,7 +759,7 @@ nav {
 /* Description */
 #description a {
 	text-decoration: underline;
-	transition: background 3s;
+	transition: background .3s;
 }
 #description a:hover {
 	color: black;
@@ -785,19 +793,22 @@ nav {
 	border: none;
 }
 #informations .table-bordered > tbody > tr > td > input {
-    padding: 0px;
-    margin: 0px;
-    line-height: 1rem;
-    height: 1.5rem;
+	padding: 0px;
+	margin: 0px;
+	line-height: 1rem;
+	height: 1.5rem;
 }
 #informations .table-bordered > tbody > tr > td {
-    float: left;
-    width: 100%;
-    border-bottom: 0px none;
+	border-bottom: 0px none;
+	font-size: .9rem;
+	padding: 0;
+	float: left;
+	width: 100%;
 }
 #informations .table-bordered > tbody > tr > td:nth-child(even) {
 	border-top: 0;
 	padding-top: 0;
+	padding-bottom: .4rem;
 }
 #informations .table-bordered > tbody > tr > td:nth-child(odd) {
 	text-decoration: underline;
