--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,9 +143,10 @@ body {
     background: #F2F2F2;
 }
 main{
-    background: white;
-    padding: 3rem 2rem;
-    margin: 2rem 3rem;
+	background: white;
+	padding: 3rem 2rem;
+	margin: 2rem 3rem;
+	position: relative;
 }
 /* Main
 -------------------------------------------------- */
@@ -208,10 +209,6 @@ hr {
     padding: 2rem 1rem;
 }
 
-#column-home p {
-  font-size: 1.5rem;
-  line-height: 120%;
-}
 /* Headers */
 
 .column-header {
@@ -286,21 +283,13 @@ hr {
 .pac-container{z-index:2000 !important;}
 
 #controlButtons{
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
-    position: absolute;
-    margin-top: -70px;
-    left: 70px;
-    right: 70px;
-}
-#controlButtons .btn{
-    background: white;
-}
-.right{
-    float: right;
-}
-.left{
-    float: left;
+  padding-right: 3rem;
+	padding-left: 3rem;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	transform: translateY(-50%);
 }
 .btn {
 	border-radius: 0;
@@ -645,6 +634,9 @@ nav {
 }
 #liste-annonces .row img {
 }
+#liste-annonces .annonce-mini.active {
+	border: .5rem solid rgb(77,250,137);
+}
 #btn-new {
     width: 100%;
     margin-bottom: .5rem;
@@ -677,12 +669,15 @@ nav {
     background-color: #fff;
 }
 .swiper-container-horizontal > .swiper-pagination {
-    bottom: .5rem;
+    text-align: left;
+    line-height: 10px;
+    bottom: 0rem;
+    top: auto;
 }
 .swiper-pagination-bullet {
-    background: rgb(255, 255, 255) none repeat scroll 0% 0%;
-    opacity: 1;
-    border: 1px solid rgba(0,0,0,.7);
+	background: rgb(255, 255, 255) none repeat scroll 0% 0%;
+	opacity: 1;
+	border: 1px solid rgba(0,0,0,.7);
 }
 .swiper-pagination-bullet-active {
     opacity: 1;
@@ -692,8 +687,7 @@ nav {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-	padding: 2rem 0;
-	border: 1px solid;
+	padding: 0;
 }
 .swiper-image {
   background-size: contain;
@@ -746,7 +740,8 @@ nav {
 	width: 100%;
 }
 .progress-bar-success {
-    background-color: rgb(77,250,137);
+  background-color: #11E76E;
+	box-shadow: none;
 }
 .fileinput-button {
   position: relative;
