--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -576,11 +576,20 @@ nav {
 
 .event-preview{
     overflow: hidden;
-    height: 300px;
+    height: 281px;
     padding: 15px;
 }
 .event-preview img{
     width: 100%;
+}
+.event-label{
+    padding: 2px 12px;
+    background: orange;
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 30px;
 }
 /* Project meta
 -------------------------------------------------- */
@@ -628,6 +637,12 @@ nav {
     padding: 15px;
     cursor: pointer;
 }
+#liste-annonces .container-fluid .pushpin{
+    color: orange;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
 #liste-annonces .container-fluid:hover {
 	background-color: #DDD;
 ;
@@ -645,7 +660,16 @@ nav {
 #filters-buttons {
 	margin: 0.5em 0px;
 }
-
+.small-content{
+    position: absolute;
+    margin-left: 15px;
+    right: 15px;
+    left: 95px;
+}
+.regular-content{
+    margin: 0 15px;
+    position: relative;
+}
 /* Annonce
 -------------------------------------------------- */
 
