--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -206,6 +206,16 @@ hr {
   width: 100%;
   height: 100%;
 }
+#column-annonces, #column-content{
+    -webkit-transition: max-width .5s ease-in-out;
+    -webkit-transition: margin-left .5s ease-in-out;
+    -moz-transition: max-width .5s ease-in-out;
+    -moz-transition: margin-left .5s ease-in-out;
+    -o-transition: max-width .5s ease-in-out;
+    -o-transition: margin-left .5s ease-in-out;
+    transition: max-width .5s ease-in-out;
+    transition: margin-left .5s ease-in-out;
+}
 #column-annonces{
 	width: 100%;
 	max-width: 450px;
@@ -217,10 +227,37 @@ hr {
     padding: 0;
 }
 #column-content{
-    width: calc(100% - 450px);
+    max-width: calc(100% - 450px);
+    width: auto;
     padding: 2rem 1rem;
 }
-
+#column-annonces.fullWidth{
+    margin-left: -450px;
+}
+#column-content.fullWidth{
+    max-width: 100%;
+}
+#hide-menu, #show-menu{
+    color: rgba(0,0,0,.5);
+    cursor: pointer;
+}
+#hide-menu{
+    position: absolute;
+    top: 25px;
+    right: 18px;
+}
+#show-menu{
+    position: absolute;
+    top: 25px;
+    left: 10px;    
+    display: none;
+}
+#hide-menu.fullWidth{
+    
+}
+#show-menu.fullWidth{
+    display: block;
+}
 /* Headers */
 
 .column-header {
